--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tranh cãi về quả sút phạt của Bruno Fernandes",
+    "content": "Trận đấu giữa Manchester United và Arsenal vào ngày 9/3 đã gây tranh cãi xung quanh quả sút phạt của Bruno Fernandes. Nhiều chuyên gia cho rằng trọng tài đã để hàng rào Arsenal đứng quá xa, tạo điều kiện cho Fernandes dễ dàng ghi bàn. Khoảng cách giữa vị trí đặt bóng và hàng rào là 10,2 m, dài hơn quy định 9,1 m. CĐV Arsenal cho rằng sai lầm này đã ảnh hưởng đến kết quả trận đấu, trong khi CĐV Man Utd chỉ trích việc phàn nàn về khoảng cách hàng rào.",
+    "link": "https://vnexpress.net/tranh-cai-ve-qua-sut-phat-cua-bruno-fernandes-4859096.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Quả sút phạt của Bruno Fernandes gây tranh cãi vì lý do gì?",
+    "answers": [
+      {
+        "text": "Hàng rào Arsenal đứng quá xa",
+        "correct": true
+      },
+      {
+        "text": "Fernandes sút phạt không chính xác",
+        "correct": false
+      },
+      {
+        "text": "Trọng tài không quan sát kỹ",
+        "correct": false
+      },
+      {
+        "text": "Arsenal không có cầu thủ cao",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá vàng nhẫn lại vượt 93 triệu đồng/lượng",
     "content": "Giá vàng nhẫn 9999 tại Bảo Tín Minh Châu đã đạt ngưỡng 93,5 triệu đồng/lượng vào chiều ngày 10-3-2025. Nhiều thương hiệu vàng khác như SJC và PNJ cũng niêm yết giá vàng nhẫn trên 93 triệu đồng/lượng, với mức tăng từ 200.000 đến 700.000 đồng/lượng so với cuối tuần trước. Giá vàng trong nước tăng mạnh do sự phục hồi của giá vàng thế giới, cùng với nhu cầu đầu tư và các chính sách kinh tế gây ra sự bất ổn.",
     "link": "https://tuoitre.vn/gia-vang-nhan-lai-vuot-93-trieu-dong-luong-20250310140331732.htm",
@@ -139,33 +166,6 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cúm ảnh hưởng công việc thế nào?",
     "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
     "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
@@ -188,6 +188,64 @@
       },
       {
         "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "answers": [
+      {
+        "text": "3,99%/năm",
+        "correct": true
+      },
+      {
+        "text": "4,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "5,0%/năm",
+        "correct": false
+      },
+      {
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -696,6 +754,33 @@
     ]
   },
   {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -722,33 +807,6 @@
       },
       {
         "text": "1/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
