--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Anh hứa chuyển tiền bán Chelsea của tỷ phú Nga Abramovich cho Ukraine",
+    "content": "Bộ trưởng Ngoại giao Anh David Lammy đã thông báo rằng chính phủ Anh sẽ chuyển hàng tỷ USD từ doanh thu bán câu lạc bộ Chelsea của tỷ phú Nga Roman Abramovich để hỗ trợ Ukraine. Ông Abramovich đã buộc phải bán Chelsea sau khi bị áp dụng lệnh trừng phạt vì cuộc chiến tại Ukraine. Tuy nhiên, có thông tin cho rằng ông muốn một phần số tiền này được gửi cho những người Nga bị ảnh hưởng bởi chiến sự, điều này có thể gây khó khăn trong việc thực hiện cam kết hỗ trợ Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/anh-hua-chuyen-tien-ban-chelsea-cua-ty-phu-nga-abramovich-cho-ukraine-20250310135301307.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Anh có kế hoạch chuyển tiền bán Chelsea của Abramovich cho ai?",
+    "answers": [
+      {
+        "text": "Ukraine",
+        "correct": true
+      },
+      {
+        "text": "Nga",
+        "correct": false
+      },
+      {
+        "text": "Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Châu Âu",
+        "correct": false
+      },
+      {
+        "text": "Israel",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tranh cãi về quả sút phạt của Bruno Fernandes",
     "content": "Trận đấu giữa Manchester United và Arsenal vào ngày 9/3 đã gây tranh cãi xung quanh quả sút phạt của Bruno Fernandes. Nhiều chuyên gia cho rằng trọng tài đã để hàng rào Arsenal đứng quá xa, tạo điều kiện cho Fernandes dễ dàng ghi bàn. Khoảng cách giữa vị trí đặt bóng và hàng rào là 10,2 m, dài hơn quy định 9,1 m. CĐV Arsenal cho rằng sai lầm này đã ảnh hưởng đến kết quả trận đấu, trong khi CĐV Man Utd chỉ trích việc phàn nàn về khoảng cách hàng rào.",
     "link": "https://vnexpress.net/tranh-cai-ve-qua-sut-phat-cua-bruno-fernandes-4859096.html",
@@ -103,6 +134,33 @@
       },
       {
         "text": "Arsenal không có cầu thủ cao",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triều Tiên phóng loạt tên lửa, cảnh báo nguy cơ xung đột",
+    "content": "Triều Tiên đã phóng hàng loạt tên lửa đạn đạo vào ngày 10/3, phản ứng trước cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc. Vụ phóng này được coi là hành động khiêu khích nguy hiểm, làm gia tăng căng thẳng trên bán đảo Triều Tiên. Bộ Ngoại giao Triều Tiên chỉ trích các cuộc tập trận này và cảnh báo rằng chúng có thể dẫn đến xung đột giữa hai bên.",
+    "link": "https://dantri.com.vn/the-gioi/trieu-tien-phong-loat-ten-lua-canh-bao-nguy-co-xung-dot-20250310135700718.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Triều Tiên lại phóng loạt tên lửa vào ngày 10/3?",
+    "answers": [
+      {
+        "text": "Vì cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc.",
+        "correct": true
+      },
+      {
+        "text": "Để thử nghiệm công nghệ tên lửa mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sức mạnh quân sự của mình.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do kinh tế.",
         "correct": false
       }
     ]
@@ -166,28 +224,28 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "Vì họ không thích đi xe.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -224,28 +282,28 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì họ không thích đi xe.",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "Vì họ yếu sinh lý.",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -754,33 +812,6 @@
     ]
   },
   {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -807,6 +838,33 @@
       },
       {
         "text": "1/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
