--- a/home.html
+++ b/home.html
@@ -179,6 +179,33 @@
     ]
   },
   {
+    "title": "Miễn học phí, phụ huynh giảm áp lực, thầy cô không còn lo \"đòi nợ\"",
+    "content": "Bộ Chính trị đã quyết định miễn toàn bộ học phí cho học sinh từ bậc mầm non đến bậc trung học phổ thông ở các trường công lập trên cả nước, bắt đầu từ năm học 2025-2026. Việc này không chỉ giúp phụ huynh giảm áp lực tài chính mà còn tạo điều kiện cho học sinh học tập tốt hơn và giảm bớt gánh nặng cho giáo viên trong việc thu tiền học phí. Các phụ huynh như chị Nguyễn Tuyết Mai đã bày tỏ sự vui mừng trước chính sách này, cho rằng nó thể hiện sự quan tâm của Đảng và Nhà nước đối với giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/mien-hoc-phi-phu-huynh-giam-ap-luc-thay-co-khong-con-lo-doi-no-20250310133726389.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Việc miễn học phí cho học sinh sẽ mang lại lợi ích gì cho phụ huynh và giáo viên?",
+    "answers": [
+      {
+        "text": "Giảm áp lực tài chính cho phụ huynh và giảm gánh nặng cho giáo viên.",
+        "correct": true
+      },
+      {
+        "text": "Tăng học phí cho các trường công lập.",
+        "correct": false
+      },
+      {
+        "text": "Tạo ra nhiều khoản đóng góp cho trường học.",
+        "correct": false
+      },
+      {
+        "text": "Giúp học sinh nghỉ học nhiều hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nơi an nghỉ yên bình của vị vua đầu tiên triều Nguyễn giữa lòng cố đô Huế",
     "content": "Thiên Thọ lăng là nơi an nghỉ của vua Gia Long, vị vua đầu tiên của triều Nguyễn, nằm cách trung tâm thành phố Huế khoảng 16km về phía tây nam. Được xây dựng vào năm 1814, lăng không chỉ mang tính lịch sử mà còn hòa quyện với thiên nhiên, tạo nên một không gian yên bình và thanh tĩnh. Đặc biệt, khu lăng mộ của vua Gia Long và hoàng hậu Tống Thị Lan được đặt cạnh nhau mà không có sự phân biệt, thể hiện tình yêu thương và sự tôn kính của vua dành cho vợ. Nơi đây đã trở thành một điểm đến du lịch hấp dẫn, thu hút nhiều du khách bởi vẻ đẹp giản dị và không khí trong lành.",
     "link": "https://tuoitre.vn/noi-an-nghi-yen-binh-cua-vi-vua-dau-tien-trieu-nguyen-giua-long-co-do-hue-2025031014183995.htm",
@@ -461,6 +488,33 @@
     ]
   },
   {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -514,33 +568,6 @@
       },
       {
         "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -1942,33 +1969,6 @@
     ]
   },
   {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -1995,6 +1995,33 @@
       },
       {
         "text": "Một chương trình học mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -2456,33 +2483,6 @@
     ]
   },
   {
-    "title": "Uống sữa có làm tăng cholesterol?",
-    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
-    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Uống sữa có làm tăng cholesterol không?",
-    "answers": [
-      {
-        "text": "Có, nếu chọn loại không phù hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Không, sữa chỉ tốt cho sức khỏe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
     "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
     "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
@@ -2505,6 +2505,33 @@
       },
       {
         "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống sữa có làm tăng cholesterol?",
+    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
+    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Uống sữa có làm tăng cholesterol không?",
+    "answers": [
+      {
+        "text": "Có, nếu chọn loại không phù hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Không, sữa chỉ tốt cho sức khỏe.",
         "correct": false
       }
     ]
@@ -2730,37 +2757,6 @@
     ]
   },
   {
-    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
-    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
-    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
-    "answers": [
-      {
-        "text": "10 xe",
-        "correct": true
-      },
-      {
-        "text": "20 xe",
-        "correct": false
-      },
-      {
-        "text": "15 xe",
-        "correct": false
-      },
-      {
-        "text": "5 xe",
-        "correct": false
-      },
-      {
-        "text": "12 xe",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
     "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
     "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
@@ -2787,6 +2783,37 @@
       },
       {
         "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
+    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
+    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
+    "answers": [
+      {
+        "text": "10 xe",
+        "correct": true
+      },
+      {
+        "text": "20 xe",
+        "correct": false
+      },
+      {
+        "text": "15 xe",
+        "correct": false
+      },
+      {
+        "text": "5 xe",
+        "correct": false
+      },
+      {
+        "text": "12 xe",
         "correct": false
       }
     ]
@@ -3012,33 +3039,6 @@
     ]
   },
   {
-    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
-    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
-    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
-        "correct": true
-      },
-      {
-        "text": "Họ sản xuất xe điện thuần.",
-        "correct": false
-      },
-      {
-        "text": "Họ có nhiều mẫu xe thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ bán xe chạy bằng xăng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Genesis GV70 mới giá từ 48.000 USD",
     "content": "Genesis GV70 2025 đã được giới thiệu tại thị trường Mỹ với giá khởi điểm từ 48.000 USD. Mẫu SUV này có thiết kế ngoại thất được nâng cấp với lưới tản nhiệt táo bạo hơn và màn hình OLED 27 inch mới bên trong. Xe có hai tùy chọn động cơ: máy xăng 2.5 tăng áp 300 mã lực và động cơ V6 3.5 tăng áp 375 mã lực. Các tính năng an toàn và hỗ trợ lái cũng được cải tiến với nhiều công nghệ hiện đại.",
     "link": "https://vnexpress.net/genesis-gv70-moi-gia-tu-48-000-usd-4858748.html",
@@ -3065,6 +3065,33 @@
       },
       {
         "text": "60.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
+    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
+    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
+        "correct": true
+      },
+      {
+        "text": "Họ sản xuất xe điện thuần.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều mẫu xe thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ bán xe chạy bằng xăng.",
         "correct": false
       }
     ]
@@ -4220,37 +4247,6 @@
       },
       {
         "text": "Vì thiết bị không hoạt động tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "WTA thưởng tiền các tay vợt nữ sinh con",
-    "content": "Hiệp hội Quần vợt Nữ (WTA) đã thông báo sẽ cung cấp gói hỗ trợ tài chính cho các tay vợt nữ trong thời gian nghỉ sinh con và điều trị hiếm muộn. Đây là một trong những bước tiến lớn trong việc nâng cao phúc lợi cho các vận động viên nữ, đặc biệt là những người có thu nhập thấp. Các tay vợt sẽ nhận được khoản thanh toán trong 12 tháng sau khi sinh và có thể bảo vệ thứ hạng của mình trong thời gian nghỉ ngơi.",
-    "link": "https://vnexpress.net/wta-thuong-tien-cac-tay-vot-nu-sinh-con-4858651.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "WTA hỗ trợ gì cho các tay vợt nữ sinh con?",
-    "answers": [
-      {
-        "text": "Hỗ trợ tài chính trong thời gian nghỉ sinh",
-        "correct": true
-      },
-      {
-        "text": "Miễn phí vé xem các trận đấu",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp huấn luyện viên cá nhân",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức các giải đấu dành riêng cho mẹ và con",
-        "correct": false
-      },
-      {
-        "text": "Tặng quà cho trẻ sơ sinh",
         "correct": false
       }
     ]
